03-jsx-functional components

--- a/01-inception/package.json
+++ b/01-inception/package.json
@@ -4,6 +4,8 @@
   "description": "learnig react.js",
   
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
