--- a/01-inception/package.json
+++ b/01-inception/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "learnig react.js",
-  
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -28,7 +27,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2"
   },
   "browserslist": [
     "last 3 versions"
